--- a/app/src/main/res/layout/ptrrv_item.xml
+++ b/app/src/main/res/layout/ptrrv_item.xml
@@ -8,6 +8,5 @@
         android:layout_height="50dp"
         android:gravity="center"
         android:textSize="17sp"
-        android:textColor="#000000"
-        android:text="ooxx"/>
+        android:textColor="#000000" />
 </RelativeLayout>
